--- a/index.html
+++ b/index.html
@@ -7,3 +7,10 @@
     <title>Gerador de senha</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+<body>
+    <section class="conteudo">
+        <div class="conteudo-titulo">
+            <img src="unlock.svg" alt="cadeado fechado">
+            <h2 class="titulo-principal">Gerador de senhas</h2>
+            <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
