--- a/index.html
+++ b/index.html
@@ -29,3 +29,9 @@
                         <p class="parametro-senha__texto">12</p>
                         <button class="parametro-senha__botao">+</button>
                     </div>
+                    </div>
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha__titulo">Características da senha</h4>
+                    <div class="parametro-senha-checkbox">
+                        <input name="maiusculo" type="checkbox" class="checkbox" checked>
+                        <label for="maiusculo">Letras maiúsculas</label>
