--- a/index.html
+++ b/index.html
@@ -44,3 +44,10 @@
                         <input name="numero" type="checkbox" class="checkbox">
                         <label for="numero">Números</label>
                     </div>
+                     <div class="parametro-senha-checkbox">
+                        <input name="simbolo" type="checkbox" class="checkbox">
+                        <label for="simbolo">Símbolos</label>
+                    </div>
+                </div>
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha__titulo">Força da senha</h4>
